@@ -28,11 +28,6 @@
 
 #include <SystemConfiguration/SystemConfiguration.h>
 
-#ifdef BUILDING_ON_TIGER
-// This function is available on Tiger, but not declared in the CFRunLoop.h header on Tiger.
-extern "C" CFRunLoopRef CFRunLoopGetMain();
-#endif
-
 namespace WebCore {
 
 static const double StateChangeTimerInterval = 2.0;
@@ -113,7 +108,7 @@ NetworkStateNotifier::NetworkStateNotifier()
     if (!configSource)
         return;
 
-    CFRunLoopAddSource(CFRunLoopGetMain(), configSource.get(), kCFRunLoopCommonModes);
+    CFRunLoopAddSource(CFRunLoopGetCurrent(), configSource.get(), kCFRunLoopCommonModes);
     
     RetainPtr<CFMutableArrayRef> keys(AdoptCF, CFArrayCreateMutable(0, 0, &kCFTypeArrayCallBacks));
     RetainPtr<CFMutableArrayRef> patterns(AdoptCF, CFArrayCreateMutable(0, 0, &kCFTypeArrayCallBacks));
