@@ -2,6 +2,15 @@
 
         Reviewed by Anders Carlsson.
 
+        Use the current run loop instead of the main runloop for the NetworkStateNotifier.
+
+        * platform/network/mac/NetworkStateNotifierMac.cpp:
+        (WebCore::NetworkStateNotifier::NetworkStateNotifier):
+
+2009-12-09  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Anders Carlsson.
+
         Use isMainThread() helper instead of pthread_main_np() != 0.
 
         * platform/mac/WebCoreObjCExtras.mm:
